--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,3 +27,5 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 </head>
+
+{% include google_analytics.html %}
