--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,9 +1,7 @@
-<!-- disquss file -->
-
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'shortname'; // required: replace example with your forum shortname
+    var disqus_shortname = 'byverdu-github'; // required: replace example with your forum shortname
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
