--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,6 @@
 
   {% include head.html %}
 
-  <body>
 
     {% include sidebar.html %}
 
@@ -13,7 +12,7 @@
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+            <a href="/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
           </h3>
         </div>
